@@ -82,6 +82,8 @@ cmd.oc=Tool commandlet for Openshift CLI (Kubernetes management tool).
 cmd.oc.detail=OpenShift CLI (oc) is a command-line tool for managing OpenShift clusters. Detailed documentation can be found at https://docs.openshift.com/
 cmd.pgadmin=Tool commandlet for pgAdmin.
 cmd.pgadmin.detail=pgAdmin is an open source management tool for PostgreSQL and derivative relational databases. Detailed documentation can be found at https://www.pgadmin.org/docs/pgadmin4/latest/index.html
+cmd.pip=Tool commandlet for pip (Python package installer).
+cmd.pip.detail=pip is the package installer for Python. You can use pip to install packages from the Python Package Index and other indexes. This commandlet delegates to uv pip internally. Detailed documentation can be found at https://pip.pypa.io/
 cmd.pycharm=Tool commandlet for Pycharm (IDE)
 cmd.pycharm.detail=Pycharm is a popular Integrated Development Environment for Python developed by JetBrains. Detailed documentation can be found at https://www.jetbrains.com/pycharm/documentation/
 cmd.python=Tool commandlet for Python.
