@@ -82,6 +82,8 @@ cmd.oc=Werkzeug Kommando für Openshift CLI (Kubernetes Management Tool).
 cmd.oc.detail=OpenShift CLI (oc) ist ein Befehlszeilentool zur Verwaltung von OpenShift-Clustern. Detaillierte Dokumentation ist zu finden unter https://docs.openshift.com/
 cmd.pgadmin=Werkzeug Kommando für pgAdmin.
 cmd.pgadmin.detail=pgAdmin ist ein Open-Source-Verwaltungswerkzeug for PostgreSQL und verwandte relationale Datenbanken. Detaillierte Dokumentation ist zu finden unter https://www.pgadmin.org/docs/pgadmin4/latest/index.html
+cmd.pip=Werkzeug Kommando für pip (Python Paketinstallation).
+cmd.pip.detail=pip ist das Paketverwaltungswerkzeug für Python. Sie können pip verwenden, um Pakete aus dem Python Package Index und anderen Indizes zu installieren. Dieses Kommando delegiert intern an uv pip. Detaillierte Dokumentation ist zu finden unter https://pip.pypa.io/
 cmd.pycharm=Werkzeug Kommando für Pycharm (IDE)
 cmd.pycharm.detail=Pycharm ist eine beliebte Python-Entwicklungsumgebung, die von JetBrains entwickelt wurde. Detaillierte Dokumentation ist zu finden unter https://www.jetbrains.com/pycharm/documentation/
 cmd.python=Werkzeug Kommando für Python.
